--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 </head>
 <body>
 
-    <img src="https://api.github.com/repos/maariz0502/2026RDaC_Dataset/contents/logo/UCO-logo.png?ref=$main" alt="Logo of UCO">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/UCO-logo.gif" alt="Logo of UCO" style="max-height: 400px; max-width: 400px;">
     <h1>Dataset for Affordable Traffic Light Recognition under Monocular Night Vision in Oklahoma</h1>
+    <h2 style="text-align: left;">Mohammad Aariz, Shuai Zhang</h2>
     
     <div class="controls">
         <button id="btn-train" class="btn active" onclick="switchDataset('train')">Training Set</button>
