formatted header properly

--- a/index.html
+++ b/index.html
@@ -139,9 +139,11 @@
 </head>
 <body>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/UCO-logo.gif" alt="Logo of UCO" style="max-height: 200px; max-width: 200px; margin-bottom:20px;">
-    <h1>Dataset for Affordable Traffic Light Recognition under Monocular Night Vision in Oklahoma</h1>
-    <h2>Mohammad Aariz, Shuai Zhang</h2>
+    <div class="header">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/UCO-logo.gif" alt="Logo of UCO" style="max-height: 200; max-width: 600px; margin-bottom:20px;">
+            <h1>Dataset for Affordable Traffic Light Recognition under Monocular Night Vision in Oklahoma</h1>
+            <h2>Mohammad Aariz, Shuai Zhang</h2>
+    </div>
     
     <div class="controls">
         <button id="btn-train" class="btn active" onclick="switchDataset('train')">Training Set</button>
