fixed capitalization in inference subfolders

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </div>
 
     <div class="controls">
-        <button id="btn-normal" class="btn active" onclick="switchDataset('normal')">Normal</button>
-        <button id="btn-snow" class="btn" onclick="switchDataset('snow')">Snow</button>
-        <button id="btn-rain" class="btn" onclick="switchDataset('rain')">Rain</button>
+        <button id="btn-normal" class="btn active" onclick="switchDataset('Normal')">Normal</button>
+        <button id="btn-snow" class="btn" onclick="switchDataset('Snow')">Snow</button>
+        <button id="btn-rain" class="btn" onclick="switchDataset('Rain')">Rain</button>
     </div>
 
     <div id="gallery"></div>
