Video fills up more of the screen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </button>
 
         <button class="btn-yt" onclick="openVideoModal('https://www.youtube.com/embed/044DxpVc6Pw?autoplay=1')">
-            Watch Rain Demo
+            Watch Snow Demo
         </button>
     </div>
 
